--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,7 @@
 SECRET_KEY=very_secret_key
 DEBUG=True
-ALLOWED_HOSTS=["*"]
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123456
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=todolist
